--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
   json_annotation: ^4.7.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
