Changed app name and bundle

--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.example.scorecard">
    <application
-        android:label="scorecard"
+        android:label="Scorecard"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
