Added persistent storage (HiveDB), removed hardcoded players

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,12 +30,15 @@ dependencies:
   flutter:
     sdk: flutter
 
+  #Hive - NoSQL Database
+  hive: ^2.2.3
+  hive_flutter: ^1.1.0
+
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^2.1.0
-  json_annotation: ^4.7.0
   uuid: ^3.0.6
 
 dev_dependencies:
@@ -48,7 +51,6 @@ dev_dependencies:
   # package. See that file for information about deactivating specific lint
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
-  json_serializable: ^6.3.1 
 
 
 
