--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,7 +41,7 @@ dependencies:
   google_fonts: ^2.1.0
   uuid: ^3.0.6
   path_provider: ^2.0.11
-  image_crop: ^0.4.1
+  # image_crop: ^0.4.1
   image_picker: ^0.8.6
 
 dev_dependencies:
