--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   path_provider: ^2.0.11
   # image_crop: ^0.4.1
   image_picker: ^0.8.6
+  provider: ^6.0.5
 
 dev_dependencies:
   flutter_test:
