Changes for app icon

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -56,6 +56,10 @@ dev_dependencies:
   # rules and activating additional ones.
   flutter_lints: ^1.0.0
 
+  # To generate app icons for both platforms
+  flutter_launcher_icons: "^0.13.1"
+    
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -99,3 +103,8 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.dev/custom-fonts/#from-packages
+
+
+flutter_launcher_icons:
+  android: true
+  image_path: "assets/icon/icon.png"
