--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   image_picker: ^0.8.6
   provider: ^6.0.5
   intl: ^0.18.1
+  share_plus: ^7.1.0
 
 dev_dependencies:
   flutter_test:
