--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,14 +34,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^6.2.1
-  uuid: ^4.5.0
+#  uuid: ^4.5.0
   path_provider: ^2.0.11
   # image_crop: ^0.4.1
   image_picker: ^1.1.2
 
-  provider: ^6.0.5
   intl: ^0.19.0
   share_plus: ^10.0.2
+  get_it: ^8.0.0
+  ulid: ^2.0.1
 
 dev_dependencies:
   flutter_test:
