--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,7 +32,7 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-  cupertino_icons: ^1.0.2
+#  cupertino_icons: ^1.0.2
   google_fonts: ^6.2.1
 #  uuid: ^4.5.0
   path_provider: ^2.0.11
@@ -41,7 +41,7 @@ dependencies:
 
   intl: ^0.19.0
   share_plus: ^10.0.2
-  get_it: ^8.0.0
+#  get_it: ^8.0.0
   ulid: ^2.0.1
   sqflite: ^2.3.3+2
 
