--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,18 +32,15 @@ dependencies:
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
-#  cupertino_icons: ^1.0.2
+  #  cupertino_icons: ^1.0.2
+
   google_fonts: ^6.2.1
-#  uuid: ^4.5.0
   path_provider: ^2.0.11
-  # image_crop: ^0.4.1
   image_picker: ^1.1.2
 
   intl: ^0.19.0
-  share_plus: ^10.0.2
-#  get_it: ^8.0.0
   ulid: ^2.0.1
-  sqflite: ^2.3.3+2
+  sqflite: ^2.4.1
   path: ^1.9.0
   provider: ^6.1.5
 
@@ -59,7 +56,7 @@ dev_dependencies:
   flutter_lints: ^4.0.0
 
   # To generate app icons for both platforms
-  flutter_launcher_icons: "^0.13.1"
+  flutter_launcher_icons: ^0.14.4
     
 
 
