--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 # In iOS, build-name is used as CFBundleShortVersionString while build-number used as CFBundleVersion.
 # Read more about iOS versioning at
 # https://developer.apple.com/library/archive/documentation/General/Reference/InfoPlistKeyReference/Articles/CoreFoundationKeys.html
-version: 0.21.2+0
+version: 0.90.1+1
 
 environment:
   sdk: ">=3.4.2 <=3.10.5"
@@ -43,6 +43,7 @@ dependencies:
   sqflite: ^2.4.1
   path: ^1.9.0
   provider: ^6.1.5
+  url_launcher: ^6.3.1
 
 dev_dependencies:
   flutter_test:
@@ -57,9 +58,6 @@ dev_dependencies:
 
   # To generate app icons for both platforms
   flutter_launcher_icons: ^0.14.4
-    
-
-
 
 # For information on the generic Dart part of this file, see the
 # following page: https://dart.dev/tools/pub/pubspec
